# clang-tidy-example

./: CMakeLists.txt
src/: main.cpp
